# diff-donkey

./: .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-04-07-ui-redesign-phase1.md
docs/superpowers/specs/: 2026-03-27-v012-db-connectivity-composite-keys.md  2026-04-07-ui-redesign-phase1-design.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  commands.rs  connections.rs  db.rs  db_loader.rs  error.rs  lib.rs  loader.rs  main.rs  query_history.rs  remote_loader.rs  remote_profiles.rs  snowflake.rs  ssh_tunnel.rs  types.rs
src-tauri/src/diff/: keys.rs  mod.rs  schema.rs  stats.rs
src-tauri/tests/: remote_auth.rs
src/lib/: tauri.ts
src/lib/components/: ActivityTab.svelte  ColumnsTab.svelte  ConnectionForm.svelte  ConnectionManager.svelte  DataTable.svelte  DatabaseSource.svelte  DiffConfig.svelte  DiffConfigStrip.svelte  OverviewTab.svelte  PrimaryKeysTab.svelte  ProgressBar.svelte  SourceSelector.svelte  TabNav.svelte  ValuesTab.svelte
src/lib/stores/: config.ts  connections.ts  diff.ts
src/lib/types/: connections.ts  diff.ts
src/routes/: +page.svelte
test-data/: orders_a.csv  orders_b.csv  wide_a.csv  wide_b.csv  wide_remote_a.csv  wide_remote_b.csv
