[package]
name = "diff-donkey"
version = "0.1.0"
description = "Desktop data diff tool powered by DuckDB"
authors = ["areese"]
edition = "2021"

[lib]
name = "diff_donkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
