[package]
name = "diff-donkey"
version = "0.1.0"
description = "Desktop data diff tool powered by DuckDB"
authors = ["areese"]
edition = "2021"

[lib]
name = "diff_donkey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
duckdb = { version = "1.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pkcs5"] }
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "io-util", "sync", "macros"] }
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"

# Integration-test-only deps. Gated behind the `integration` feature so that a
# plain `cargo test` does not pull aws-sdk-s3 (very large) or testcontainers.
# Enable with `cargo test --features integration --test remote_auth`.
testcontainers = { version = "0.24", optional = true }
testcontainers-modules = { version = "0.12", features = ["minio"], optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

[features]
integration = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "dep:aws-config",
    "dep:aws-sdk-s3",
]

[[test]]
name = "remote_auth"
required-features = ["integration"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
